testdata/e2e/examples/non-resource-assertion/error.yaml
(x_k8s_list($client, 'v1', 'Node')):
  (length(items)): 2
