testdata/e2e/examples/non-resource-assertion/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: non-resource-assertion
spec:
  steps:
  - try:
    - assert:
        file: assert.yaml
    - error:
        file: error.yaml
  - try:
    - assert:
        resource:
          (x_k8s_list($client, 'v1', 'Node')):
            (length(@)): 1
    - error:
        resource:
          (x_k8s_list($client, 'v1', 'Node')):
            (length(@)): 2
